Pagination and filter ajusts

--- a/index.html
+++ b/index.html
@@ -338,6 +338,17 @@
                 </nav>
             </div>
 
+            <div id="paginationFiltered" class="hidden">
+                <nav class="cardsPagination">
+                    <ul class="pageNumbering">
+                        <li><button class="paginationControl btn btnPreviousFiltered" ><</button></li>
+                        <li class="pageNumberFiltered pageNumberActive">1</li>
+                        <li><button class="paginationControl btn btnNextFiltered">></button></li>
+                    </ul>
+                
+                </nav>
+            </div>
+
         </section>
     </main>
 
