404 error handling and code improvements

--- a/about.html
+++ b/about.html
@@ -50,10 +50,8 @@
     <article class="why">
         <h2 class="whyTitle">Por que a <em>Lett</em> ?</h2>
         <p class="whyText">
-            Bom, oportunidades só realmente sabemos se valem a pena ou se nos agrega se aproveitarmos, mas óbvio que
-            às vezes olhando de longe conseguimos saber quando algo não vale a pena. O que foi o caso contrário à LETT,
-            ter a oportunidade de trabalhar inicialmente como estagiário buscando aprender e melhorar meu conhecimento
-            em
+            Pela LETT ter a oportunidade de trabalhar inicialmente como estagiário buscando aprender e melhorar meu
+            conhecimento em
             uma empresa séria e específica da área que busco realmente é a <strong>oportunidade</strong> que busco.
             Acredito fielmente que
             através da dedicação e bagagem que possuo, tenho muito o que a acrecentar à empresa e o contrário acredito
