--- a/about.html
+++ b/about.html
@@ -32,9 +32,8 @@
             Tenho 23 anos, sou marido da Karol, pai da Jade, designer e desenvolvedor.
         </p>
         <p class="aboutMeText">
-            Atualmente estou cursando <strong>Análise e Desenvolvimento de Sistemas</strong> com previsão de formar em
-            2023.2
-            e diversos cursos principalmente na <strong>Alura</strong>.
+            Atualmente estou cursando <strong>Análise e Desenvolvimento de Sistemas</strong> com previsão de
+            formação em 2023.2 e diversos cursos principalmente na <strong>Alura</strong>.
         </p>
         <p class="aboutMeText">
             Atuei 4 anos como designer gráfico, trabalhei com empresas e freelancer em diversos projetos de
@@ -42,24 +41,20 @@
             posso dizer que foi o click que precisei para decidir migrar de área, apenas a prototipagem não me
             satisfez gostaria muito de desenvolver então pesquisei bastante e estudei muito. Consegui pouco tempo
             depois oportunidade de atuar com desenvolvimento, mas a oportunidade veio com Java em backEnd, foi muito
-            boa a experência e todo o aprendizado que com ela veio. Mas realmente tenho mais afinidade e preferência
-            pelo stack Front.
+            boa a experência e todo o aprendizado que com ela me trouxe. Mas realmente tenho mais afinidade e preferência
+            pela linguagem JavaScript e o stack Front.
         </p>
     </section>
 
     <article class="why">
         <h2 class="whyTitle">Por que a <em>Lett</em> ?</h2>
         <p class="whyText">
-            Pela LETT ter a oportunidade de trabalhar inicialmente como estagiário buscando aprender e melhorar meu
-            conhecimento em
-            uma empresa séria e específica da área que busco realmente é a <strong>oportunidade</strong> que busco.
-            Acredito fielmente que
-            através da dedicação e bagagem que possuo, tenho muito o que a acrecentar à empresa e o contrário acredito
-            ser
-            válido também. Gostaria muito poder fazer parte do time, não apenas como um estagiário mas sim como o case
-            que
-            poderia daqui a 5 anos estar contando a minha trajetória e agradecendo quem estendeu os braços para mim e
-            permitiu o início de uma longa jornada.
+            Pela LETT acredito que trabalhar inicialmente como estagiário buscando aprender e melhorar meu
+            conhecimento em uma empresa séria e específica da área que busco realmente é a <strong>oportunidade</strong> que busco.
+            Acredito fielmente que através da dedicação e bagagem que possuo, tenho muito o que a acrecentar à empresa e o
+            contrário acredito ser válido também. Gostaria muito poder fazer parte do time, não apenas como um estagiário mas sim como o case
+            que poderia daqui a algum tempo estar contando a minha trajetória e agradecendo quem estendeu os braços para mim e
+            permitiu o início de uma longa jornada que atualmente é um sonho.
         </p>
     </article>
 
@@ -74,7 +69,7 @@
                 <li><img class="techImg" src="./assets/img/technologies/HTML5.png" alt="HTML" /></li>
                 <li><img class="techImg" src="./assets/img/technologies/CSS.png" alt="CSS" /></li>
                 <li><img class="techImg" src="./assets/img/technologies/JavaScript.png" alt="JavaScript" /></li>
-                <li><img class="techImg" src="./assets/img/technologies/GitHUb.png" alt="GitHub" /></li>
+                <li><img class="techImg darkImg" src="./assets/img/technologies/GitHUb.png" alt="GitHub" /></li>
                 <li><img class="techImg" src="./assets/img/technologies/SQLDeveloper.png" alt="Oracle DB" /></li>
                 <li><img class="techImg" src="./assets/img/technologies/MySql.png" alt="MySql" /></li>
             </ul>
